Add "Why Unreal Engine containers?" YouTube video

--- a/_data/media.yml
+++ b/_data/media.yml
@@ -4,3 +4,9 @@
 -
   name: Online Training Resources
   items:
+    -
+      name: Why Unreal Engine containers?
+      link: https://youtu.be/egUC21cETgo
+      author: Adam Rehn
+      type: video
+      description: Provides a brief overview of the key use cases for Unreal Engine containers. 
