Add Epic MegaGrant to sponsors list

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -7,3 +7,11 @@
       that employs community hub creator Adam Rehn as a consultant. Consulting
       fees paid to this provider help fund the ongoing maintenance of the
       Unreal Containers community hub.
+  -
+    name: Epic MegaGrants
+    link: https://www.unrealengine.com/megagrants
+    logo: epic_megagrants.svg
+    blurb: >
+      the Unreal Containers community hub received an Epic MegaGrant from Epic Games
+      in July 2019 to support the development of training materials and the promotion
+      of the Unreal Engine as the world's first cloud native game engine.
