Remove FVector Consulting branding

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -1,12 +1,12 @@
   -
-    name: FVector Consulting
-    link: http://unrealconsulting.com
-    logo: fvector_consulting.svg
+    name: TensorWorks
+    link: https://unrealconsulting.com
+    logo: tensorworks.svg
     blurb: >
-      FVector Consulting is a [support provider](/support#fvector-consulting)
-      that employs community hub creator Adam Rehn as a consultant. Consulting
-      fees paid to this provider help fund the ongoing maintenance of the
-      Unreal Containers community hub.
+      TensorWorks is a [support provider](/support#tensorworks) that employs
+      community hub creator Adam Rehn as a consultant. Consulting fees paid
+      to this provider help fund the ongoing maintenance of the Unreal
+      Containers community hub.
   -
     name: Epic MegaGrants
     link: https://www.unrealengine.com/megagrants
