Add Unreal Containers Community Discord link

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -29,8 +29,8 @@ pages:
   
 social:
   -
-    name: Unreal Slackers @ Discord
-    link: https://unrealslackers.org/
+    name: Unreal Containers Community Discord
+    link: https://discord.gg/x9XpGKfE
     button: discord
     icon: discord
   -
