Update invite link for the Discord server

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -30,7 +30,7 @@ pages:
 social:
   -
     name: Unreal Containers Community Discord
-    link: https://discord.gg/x9XpGKfE
+    link: https://discord.gg/8hmcnCCscq
     button: discord
     icon: discord
   -
