--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -4,7 +4,7 @@
     logo: tensorworks.svg
     blurb: >
       TensorWorks is a [support provider](/support#tensorworks) that employs
-      community hub creator Adam Rehn as a consultant. Consulting fees paid
+      community hub creator Dr Adam Rehn as a consultant. Consulting fees paid
       to this provider help fund the ongoing maintenance of the Unreal
       Containers community hub.
   -
